fix 1.手动清理指令参数失效
feat
1.修改 配置文件结构
2.增强 实体过滤表达式